	  xz.

	* Check for mandb_nfmt and mandb_tfmt in the manual page hierarchy
	  as documented, not in the current directory.  This was broken by
	  the working-directory-handling changes in 2.8.3.  Note that this
	  change means that "man -l" will never use an external formatter
	  (which was never documented behaviour and was surely a bad idea).

man-db 2.8.3 (5 April 2018)
===========================

Major changes since man-db 2.8.2:

	Fixes:
	------

	* Make seccomp sandbox allow madvise, since that's used by lbzip2.

	* Make seccomp sandbox allow kill and tgkill outright, since groff
	  uses kill to pass on signals to its child processes.

	* Make seccomp sandbox allow sibling architectures on
	  x86/x86_64/x32, since people sometimes mix and match architectures
	  there for performance reasons.

	* Fix version check in locale macro loading to tolerate groff
	  release candidates.

	* man now only changes working directory in child processes, so
	  never fails due to being unable to change back to its original
	  working directory.

	* accessdb, apropos, and lexgrog no longer emit spurious gettext
	  headers in their --help output when localised.

man-db 2.8.2 (28 February 2018)
===============================

Major changes since man-db 2.8.1:

	Fixes:
	------

	* Make seccomp sandbox allow kill and tgkill when the signal is
	  directed at the current process or one of its threads; this is
	  needed by xz.

	* Make seccomp sandbox allow ioctl(fd, TIOCGWINSZ), since that's used
	  by musl.

	* Work around the proprietary "ESET File Security" antivirus program in
	  seccomp sandbox: if this is in use then we need to allow some
	  socket-related system calls.

	* Work around the "snoopy" execve() wrapper and logger in seccomp
	  sandbox: if this is in use then we need to allow some
	  socket-related system calls.

	* Interpret EFAULT from seccomp_load as meaning that seccomp is
	  unavailable, since this can be returned by some versions of
	  qemu-user.
